--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h2>Лабораторні заняття</h2>
         <ul>
             <li><a href="https://github.com/novostroinyi-dima/Lab1">Лабораторне заняття 1</a> - Реєстраційна форма</li>
-            <li><a href="#">Лабораторне робота 2</a> - Короткий опис</li>
+            <li><a href="https://novostroinyi-dima.github.io/lab2/">Лабораторне робота 2</a> - Training css</li>
             <li><a href="#">Лабораторне робота 3</a> - Короткий опис</li>
             <li><a href="#">Лабораторне робота 4</a> - Короткий опис</li>
             <li><a href="#">Лабораторне робота 5</a> - Короткий опис</li>
