--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section id="labs">
         <h2>Лабораторні заняття</h2>
         <ul>
-            <li><a href="https://github.com/novostroinyi-dima/Lab1">Лабораторне заняття 1</a> - Реєстраційна форма</li>
+            <li><a href="https://novostroinyi-dima.github.io/Lab1/">Лабораторне заняття 1</a> - Реєстраційна форма</li>
             <li><a href="https://novostroinyi-dima.github.io/lab2/">Лабораторне робота 2</a> - Training css</li>
             <li><a href="#">Лабораторне робота 3</a> - Короткий опис</li>
             <li><a href="#">Лабораторне робота 4</a> - Короткий опис</li>
