--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul>
             <li><a href="#">Практична робота 1</a> - Короткий опис</li>
             <li><a href="#">Практична робота 2</a> - Короткий опис</li>
-            <li><a href="#">Практична робота 3</a> - Короткий опис</li>
+            <li><a href="https://novostroinyi-dima.github.io/lab3/">Практична робота 3</a> - Clone youtube</li>
             <li><a href="#">Практична робота 4</a> - Короткий опис</li>
             <li><a href="#">Практична робота 5</a> - Короткий опис</li>
             <li><a href="#">Практична робота 6</a> - Короткий опис</li>
@@ -51,7 +51,7 @@
         <ul>
             <li><a href="https://novostroinyi-dima.github.io/Lab1/">Лабораторне заняття 1</a> - Реєстраційна форма</li>
             <li><a href="https://novostroinyi-dima.github.io/lab2/">Лабораторне робота 2</a> - Training css</li>
-            <li><a href="#">Лабораторне робота 3</a> - Короткий опис</li>
+            <li><a href="https://novostroinyi-dima.github.io/lab3/">Лабораторне робота 3</a> - Clone youtube</li>
             <li><a href="#">Лабораторне робота 4</a> - Короткий опис</li>
             <li><a href="#">Лабораторне робота 5</a> - Короткий опис</li>
             <li><a href="#">Лабораторне робота 6</a> - Короткий опис</li>
