--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             <li><a href="https://novostroinyi-dima.github.io/lab2/">Лабораторне робота 2</a> - Training css</li>
             <li><a href="https://novostroinyi-dima.github.io/lab3/">Лабораторне робота 3</a> - Clone youtube</li>
             <li><a href="https://novostroinyi-dima.github.io/lab4/">Лабораторне робота 4</a> - Weekly plan</li>
-            <li><a href="#">Лабораторне робота 5</a> - Короткий опис</li>
-            <li><a href="#">Лабораторне робота 6</a> - Короткий опис</li>
-            <li><a href="#">Лабораторне робота 7</a> - Короткий опис</li>
+            <li><a href="https://novostroinyi-dima.github.io/lab5/">Лабораторне робота 5</a> - Короткий опис</li>
         </ul>
     </section>
 
